test/spec_vectors/simd_splat/fail/module_4.wat
(module (func (result v128) i8x16.splat (f64.const 0.0)))